<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".MainActivity"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="76dp">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAppearance="@style/MyTextAppearance"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTextViewLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MyTextAppearance"
            app:boxBackgroundColor="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textAppearance="@style/MyTextAppearance"
            app:layout_constraintTop_toBottomOf="@id/phoneTextViewLayout" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MyTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderTextView"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                tools:ignore="MissingConstraints" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/receiveNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:checked="false"
            android:text="@string/receiveNotification"
            android:textAppearance="@style/MyTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
            app:thumbTint="@color/purple_700"
            app:trackTint="@color/purple_100" />

        <CheckBox
            android:id="@+id/aboutAuthorizationOnDeviceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_secondary"
            android:enabled="false"
            android:text="@string/aboutAuthorizationOnDevice"
            android:textAppearance="@style/MyTextAppearance"
            app:layout_constraintTop_toBottomOf="@+id/receiveNotificationSwitch"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/aboutNewProductsAndOffersCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_secondary"
            android:enabled="false"
            android:text="@string/aboutNewProductsAndOffers"
            android:textAppearance="@style/MyTextAppearance"
            app:layout_constraintTop_toBottomOf="@id/aboutAuthorizationOnDeviceCheckBox"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pointsTextViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutNewProductsAndOffersCheckBox">

            <TextView
                android:id="@+id/pointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/charCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:text="@string/pointsCounter"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            app:indicatorColor="@color/purple_500"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/pointsTextViewLinearLayout"
            app:trackColor="@color/purple_100"
            tools:ignore="MissingConstraints,NotSibling" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:enabled="false"
            android:text="@string/saveButton"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
